Add transaction lesson